4th commit
User can access the game as a guest player without the full features such as equation challenge mode.